<resources>
    <string name="app_name">Piramida zdrowych nawyków</string>
    <string name="title_today">Dzisiaj</string>
    <string name="title_dashboard">Wyniki</string>
    <string name="title_notifications">Powiadomienia</string>
    <string name="fat">Tłuszcze</string>
    <string name="meat">Mięso</string>
    <string name="milk">Nabiał</string>
    <string name="grain">Zboże</string>
    <string name="fruits">Warzywa i Owoce</string>title_yesterday
    <string name="workout">Ćwiczenia</string>
    <string name="title_yesterday">Wczoraj</string>
    <string name="donate_text1">PLS DONATE US</string>
    <string name="donate_text2">We need money for pizza</string>
    <string name="donate_text3">the hawaian pizza</string>
</resources>
