<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation">

    </android.support.design.widget.BottomNavigationView>

    <LinearLayout
        android:layout_width="387dp"
        android:layout_height="533dp"
        android:gravity="center"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:weightSum="6"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal"
            android:weightSum="13">

            <TextView
                android:id="@+id/fatLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="center_vertical"
                android:text="@string/fat" />

            <Button
                android:id="@+id/fatButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:contentDescription="@string/fat"
                android:drawableTop="@drawable/fries"
                android:paddingTop="18dp"
                android:textColor="#101010"
                android:background="@drawable/shape"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal"
            android:weightSum="13">

            <TextView
                android:id="@+id/meatLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="center_vertical"
                android:text="@string/meat" />

            <Button
                android:id="@+id/meatButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:contentDescription="@string/meat"
                android:drawableTop="@drawable/meat"
                android:paddingTop="18dp"
                android:textColor="#101010"
                android:background="@drawable/shape"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal"
            android:weightSum="13">

            <TextView
                android:id="@+id/milkLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:text="@string/milk" />

            <Button
                android:id="@+id/milkButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:contentDescription="@string/milk"
                android:drawableTop="@drawable/cheese"
                android:paddingTop="18dp"
                android:background="@drawable/shape" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal"
            android:weightSum="13">


            <TextView
                android:id="@+id/grainLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="@string/grain" />

            <Button
                android:id="@+id/grainButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:contentDescription="@string/grain"
                android:drawableTop="@drawable/bread"
                android:paddingTop="18dp"
                android:background="@drawable/shape" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal"
            android:weightSum="13">


            <TextView
                android:id="@+id/fruitLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="center_vertical"
                android:text="@string/fruits" />

            <Button
                android:id="@+id/fruitsButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:contentDescription="@string/fruits"
                android:drawableTop="@drawable/apple"
                android:paddingTop="18dp"
                android:textColor="#101010"
                android:background="@drawable/shape"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal"
            android:weightSum="13">

            <TextView
                android:id="@+id/workoutLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center_vertical"
                android:text="@string/fruits" />
            <Button
                android:id="@+id/workoutButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:contentDescription="@string/workout"
                android:drawableTop="@drawable/workout"
                android:paddingTop="18dp"
                android:textColor="#101010"
                android:background="@drawable/shape"/>
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>